# Security-Intelligence-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: cli.py  main.py
apps/api/tests/: conftest.py
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_users.py  23506f28dc89_milestone_2_expansion.py  5f4f3bdfd20b_milestone_2_models.py
apps/backend/app/: cli.py  scheduler_main.py  worker_main.py
apps/backend/app/api/v1/: auth.py  router.py
apps/backend/app/core/: config.py  deps.py  logging.py  middleware.py  security.py
apps/backend/app/db/: engine.py  redis.py  session.py
apps/backend/app/models/: __init__.py  alert.py  connector.py  user.py  vulnerability.py  watchlist.py
apps/backend/app/schemas/: auth.py
apps/backend/app/services/: normalization.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_auth.py  test_vulnerability_flow.py  test_watchlists.py
apps/backend/tests/unit/: test_normalization.py  test_security.py
apps/scheduler/: Dockerfile  pyproject.toml
apps/scheduler/app/: main.py  schedules.py
apps/web/: Dockerfile  generate_files.py  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: query-provider.tsx  sidebar.tsx
apps/worker/: Dockerfile  pyproject.toml
docs/: architecture.md  dependency-versions.md  env-reference.md
(+29 files in other folders)
