[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "argon2-cffi==23.1.0",
    "redis[hiredis]==5.2.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "dramatiq[redis]==1.17.0",
    "apscheduler==3.10.4",
    "click==8.1.8",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "factory-boy==3.3.1",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "watchdog==6.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
